SERVER-38190 killOp while committing a prepared transaction can trigger std::terminate